tests/contract_testcases/polkadot/tags/enum_tag.sol

        /// @param
        enum x {
            foo1
        }
// ---- Expect: diagnostics ----
// error: 2:14-3:1: tag '@param' is not valid for enum
